fix style of list of checked amenities so it doesnt overflow

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -71,6 +71,10 @@
 .container .filters .amenities:hover .popover {
 	display: list-item;
 }
+.amenities h4 {
+	white-space: nowrap;
+	overflow: hidden;
+}
 
 .container .filters .popover {
 	max-height: 300px;
